# openspd

./: .gitignore  DISCLAIMER.md  README.md  app.py  decoder.py  metrics.py  protocol.py
rust/: Cargo.toml
rust/crates/core/: Cargo.toml
rust/crates/core/src/: encoderv2.rs  metrics.rs  profile.rs  protocol.rs
rust/crates/ffi/: Cargo.toml  README.md
rust/crates/ffi/bindings/kotlin/uniffi/openspd_ffi/: openspd_ffi.kt
rust/crates/ffi/bindings/swift/: openspd_ffi.swift  openspd_ffiFFI.h  openspd_ffiFFI.modulemap
rust/crates/ffi/src/: lib.rs
rust/crates/io/: Cargo.toml
rust/crates/io/src/: lib.rs  users.rs
rust/src/: encoderv2.rs  lib.rs  main.rs  profile.rs  protocol.rs
